[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
regex = "1.10.2"
time = { version = "0.3.30", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }


[profile.release]
debug = true

[dev-dependencies]
test-case = "3.3.1"

[[bin]]
name = "01-p1"
path = "bin/01/p1.rs"

[[bin]]
name = "01-p2"
path = "bin/01/p2.rs"

[[bin]]
name = "02-p1"
path = "bin/02/p1.rs"

[[bin]]
name = "02-p2"
path = "bin/02/p2.rs"

[[bin]]
name = "03-p1"
path = "bin/03/p1.rs"

[[bin]]
name = "03-p2"
path = "bin/03/p2.rs"

[[bin]]
name = "04-p1"
path = "bin/04/p1.rs"

[[bin]]
name = "04-p2"
path = "bin/04/p2.rs"

[[bin]]
name = "05-p1"
path = "bin/05/p1.rs"

[[bin]]
name = "05-p2"
path = "bin/05/p2.rs"

[[bin]]
name = "06-p1"
path = "bin/06/p1.rs"

[[bin]]
name = "07-p1"
path = "bin/07/p1.rs"

[[bin]]
name = "07-p2"
path = "bin/07/p2.rs"

[[bin]]
name = "08-p1"
path = "bin/08/p1.rs"

[[bin]]
name = "08-p2"
path = "bin/08/p2.rs"

[[bin]]
name = "09-p1"
path = "bin/09/p1.rs"

[[bin]]
name = "09-p2"
path = "bin/09/p2.rs"

[[bin]]
name = "10-p1"
path = "bin/10/p1.rs"

[[bin]]
name = "10-p2"
path = "bin/10/p2.rs"

[[bin]]
name = "11-p1"
path = "bin/11/p1.rs"

[[bin]]
name = "11-p2"
path = "bin/11/p2.rs"

[[bin]]
name = "12-p1"
path = "bin/12/p1.rs"

[[bin]]
name = "12-p2"
path = "bin/12/p2.rs"

[[bin]]
name = "13-p1"
path = "bin/13/p1.rs"

[[bin]]
name = "13-p2"
path = "bin/13/p2.rs"

[[bin]]
name = "14-p1"
path = "bin/14/p1.rs"

[[bin]]
name = "14-p2"
path = "bin/14/p2.rs"

[[bin]]
name = "15-p1"
path = "bin/15/p1.rs"

[[bin]]
name = "15-p2"
path = "bin/15/p2.rs"

[[bin]]
name = "16-p1"
path = "bin/16/p1.rs"

[[bin]]
name = "16-p2"
path = "bin/16/p2.rs"

[[bin]]
name = "17-p1"
path = "bin/17/p1.rs"

[[bin]]
name = "17-p2"
path = "bin/17/p2.rs"

[[bin]]
name = "18-p1"
path = "bin/18/p1.rs"

[[bin]]
name = "18-p2"
path = "bin/18/p2.rs"

[[bin]]
name = "19-p1"
path = "bin/19/p1.rs"

[[bin]]
name = "19-p2"
path = "bin/19/p2.rs"
